# witch-qa-familiar

./: Cargo.toml  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: auth.rs  crypto.rs  main.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/deployment/: nginx.default.conf
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/app/: store.ts
frontend/src/features/hello/: Hello.tsx  helloAPI.ts  helloSlice.ts
