[package]
name = "witch-qa-familiar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

actix-cors = "0.7"
actix-web = "4"
actix-web-httpauth = "0.8"
jwt = "0.16"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5.3"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
